[package]
name = "lngh_strings"
version = "0.2.0"
edition = "2021"
#include = [
#    "/src/**", #Include all files inside of root/src/
#    "Cargo.toml",
#    "Cargo.lock",
#    "README.md",
#    "LICENCE"
#]
homepage =  "https://github.com/largenumberhere/lngh-strings" #A url
description = "Largenumbergoeshere's string utilities"
repository = "https://github.com/largenumberhere/lngh-strings" #Github project url
keywords =[ #Up to 5 categories
    "string",
    "utilities",
    "helper"
]
license = "MIT"
#license-file="LICENCE"
readme="README.md"
categories =[
    "api-bindings"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]


[dependencies]
